--- a/Ayudantias/AY01 - EDD101/Ayudantía 01 - Enunciado.ipynb
+++ b/Ayudantias/AY01 - EDD101/Ayudantía 01 - Enunciado.ipynb
@@ -156,7 +156,7 @@
     "### Ejercicio final\n",
     "\n",
     "\n",
-    "Los ayudantes del DCC se pasaron la última semana de vacaciones jugando pokemon, pero para hacerlo más entretenido, de vez en cuando hacían alguna competencia y el perdedor debía liberar el último pokemon capturado. Se ha registrado cada acción de forma temporal en un archivo y se le pide que guardas la información de una forma que dada un nombre, te indique todos los pokemons que tiene ahora.\n",
+    "Los ayudantes del DCC se pasaron la última semana de vacaciones jugando pokemon, pero para hacerlo más entretenido, de vez en cuando hacían alguna competencia y el perdedor debía liberar el primer pokemon capturado. Se ha registrado cada acción de forma temporal en un archivo y se le pide que guardas la información de una forma que dada un nombre, te indique todos los pokemons que tiene ahora.\n",
     "\n",
     "\n",
     "El archivo viene con el formato: `nombre;accion;pokemon` donde acción es “atrapar” o “liberar”. Si la acción es “liberar”, entonces pokemon será vacío (== “-“)."
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
