--- a/Ayudantias/AY01 - EDD101/Ayudantia 01 - Solucion.ipynb
+++ b/Ayudantias/AY01 - EDD101/Ayudantia 01 - Solucion.ipynb
@@ -343,7 +343,7 @@
     "        if accion == \"atrapar\":\n",
     "            ayudantes[ayudante].append(pokemon)\n",
     "        else:\n",
-    "            ayudantes[ayudante].pop()\n",
+    "            ayudantes[ayudante].popleft()\n",
     "print(ayudantes[\"Enzo\"])"
    ]
   },
@@ -631,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.6rc1"
   }
  },
  "nbformat": 4,
