AY06: Link del feedback

--- a/Ayudantias/AY06 - Excepciones/Solución Ayudantía.ipynb
+++ b/Ayudantias/AY06 - Excepciones/Solución Ayudantía.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## Ayudantía Excepciones\n",
     "\n",
+    "[**POR FAVOR RESPONDAN EL FEEDBACK DE LA AYUDANTÍA**](https://docs.google.com/forms/d/e/1FAIpQLSegdf6lcaGN7eNRLWkxAQwmVZmIjovTTfjLqDsOG458_h7EhQ/viewform?usp=sf_link)\n",
+    "\n",
     "El equipo de Tube-You creó un módulo library.py para analizar los datos de sus videos. Sin embargo,\n",
     "dicho código no identifica adecuadamente los errores de formato (o de consistencia) que pueden aparecer. Tu\n",
     "deber será tomar la librerı́a fallida, identificar los errores pertinentes, y levantar las excepciones según sea\n",
@@ -356,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
